Revert "Gracefully handle stripped ZGC/Shenandoah barrier symbols in libjvm"
This reverts commit 4f808cd8f69e7f0d5a512c8960c66a6b6b84dbfd.