@@ -198,8 +198,6 @@ typedef struct {
     int32_t vmconst_barrierset_modref;
     int32_t vmconst_barrierset_cardtable;
     int32_t vmconst_barrierset_g1;
-    int32_t vmconst_barrierset_z;
-    int32_t vmconst_barrierset_shenandoah;
     int32_t vmconst_cardtable_clean_card;
     int32_t vmconst_cardtable_dirty_card;
     int32_t vmconst_g1_young_card;
@@ -906,8 +904,6 @@ static void neko_walk_vm_int_constants(void *jvm) {
         else if (neko_streq_safe(name, "BarrierSet::ModRef")) g_neko_method_layout.vmconst_barrierset_modref = (int32_t)value;
         else if (neko_streq_safe(name, "BarrierSet::CardTableBarrierSet")) g_neko_method_layout.vmconst_barrierset_cardtable = (int32_t)value;
         else if (neko_streq_safe(name, "BarrierSet::G1BarrierSet")) g_neko_method_layout.vmconst_barrierset_g1 = (int32_t)value;
-        else if (neko_streq_safe(name, "BarrierSet::ZBarrierSet")) g_neko_method_layout.vmconst_barrierset_z = (int32_t)value;
-        else if (neko_streq_safe(name, "BarrierSet::ShenandoahBarrierSet")) g_neko_method_layout.vmconst_barrierset_shenandoah = (int32_t)value;
         else if (neko_streq_safe(name, "CardTable::clean_card")) g_neko_method_layout.vmconst_cardtable_clean_card = (int32_t)value;
         else if (neko_streq_safe(name, "CardTable::dirty_card")) g_neko_method_layout.vmconst_cardtable_dirty_card = (int32_t)value;
         else if (neko_streq_safe(name, "G1CardTable::g1_young_gen")) g_neko_method_layout.vmconst_g1_young_card = (int32_t)value;
@@ -919,40 +915,9 @@ static void neko_walk_vm_int_constants(void *jvm) {
     g_neko_method_layout.basictypes_resolved = (g_neko_method_layout.basictype_int != 0) ? JNI_TRUE : JNI_FALSE;
 }
 
-/* Robust fallback: when VMStructs doesn't expose ZBarrierSet/ShenandoahBarrierSet
- * RTTI tag constants, parse /proc/self/cmdline to find the requested GC.
- * Read once and cache. Returns:
- *   NEKO_GC_BARRIER_Z          if -XX:+UseZGC is on the command line
- *   NEKO_GC_BARRIER_SHENANDOAH if -XX:+UseShenandoahGC is on the command line
- *   NEKO_GC_BARRIER_UNKNOWN    otherwise (G1/Parallel/Serial fall through to
- *                               the BarrierSet RTTI tag check). */
-static int32_t neko_detect_gc_from_cmdline(void) {
-    static int32_t cached = -2;
-    FILE *fp;
-    char buf[4096];
-    size_t n;
-    size_t i;
-    if (cached != -2) return cached;
-    cached = NEKO_GC_BARRIER_UNKNOWN;
-    fp = fopen("/proc/self/cmdline", "rb");
-    if (fp == NULL) return cached;
-    n = fread(buf, 1, sizeof(buf) - 1, fp);
-    fclose(fp);
-    /* /proc/self/cmdline is NUL-separated; convert NULs to spaces for strstr. */
-    for (i = 0; i < n; i++) if (buf[i] == '\\0') buf[i] = ' ';
-    buf[n] = '\\0';
-    if (strstr(buf, "+UseZGC") != NULL) {
-        cached = NEKO_GC_BARRIER_Z;
-    } else if (strstr(buf, "+UseShenandoahGC") != NULL) {
-        cached = NEKO_GC_BARRIER_SHENANDOAH;
-    }
-    return cached;
-}
-
 static void neko_detect_current_gc_barrier(void) {
     void *bs;
     int32_t tag = -1;
-    int32_t cmdline_kind;
     g_neko_method_layout.current_barrier_kind = NEKO_GC_BARRIER_UNKNOWN;
     g_neko_method_layout.current_barrier_set = NULL;
     g_neko_method_layout.current_card_table = NULL;
@@ -968,25 +933,14 @@ static void neko_detect_current_gc_barrier(void) {
     tag = *(int32_t*)((char*)bs
         + g_neko_method_layout.off_barrierset_fake_rtti
         + g_neko_method_layout.off_barrierset_fakertti_concrete_tag);
-    cmdline_kind = neko_detect_gc_from_cmdline();
     if (tag == g_neko_method_layout.vmconst_barrierset_g1) {
         g_neko_method_layout.current_barrier_kind = NEKO_GC_BARRIER_G1;
     } else if (tag == g_neko_method_layout.vmconst_barrierset_cardtable) {
         g_neko_method_layout.current_barrier_kind = NEKO_GC_BARRIER_CARDTABLE;
-    } else if (g_neko_method_layout.vmconst_barrierset_z >= 0
-               && tag == g_neko_method_layout.vmconst_barrierset_z) {
+    } else if (g_hotspot.use_zgc) {
         g_neko_method_layout.current_barrier_kind = NEKO_GC_BARRIER_Z;
-        g_hotspot.use_zgc = JNI_TRUE;
-    } else if (g_neko_method_layout.vmconst_barrierset_shenandoah >= 0
-               && tag == g_neko_method_layout.vmconst_barrierset_shenandoah) {
+    } else if (g_hotspot.use_shenandoah_gc) {
         g_neko_method_layout.current_barrier_kind = NEKO_GC_BARRIER_SHENANDOAH;
-        g_hotspot.use_shenandoah_gc = JNI_TRUE;
-    } else if (g_hotspot.use_zgc || cmdline_kind == NEKO_GC_BARRIER_Z) {
-        g_neko_method_layout.current_barrier_kind = NEKO_GC_BARRIER_Z;
-        g_hotspot.use_zgc = JNI_TRUE;
-    } else if (g_hotspot.use_shenandoah_gc || cmdline_kind == NEKO_GC_BARRIER_SHENANDOAH) {
-        g_neko_method_layout.current_barrier_kind = NEKO_GC_BARRIER_SHENANDOAH;
-        g_hotspot.use_shenandoah_gc = JNI_TRUE;
     }
     if (g_neko_method_layout.off_cardtablebarrierset_card_table >= 0) {
         void *ct = *(void**)((char*)bs + g_neko_method_layout.off_cardtablebarrierset_card_table);
@@ -1009,32 +963,16 @@ static jboolean neko_gc_barrier_layout_ready(void) {
         case NEKO_GC_BARRIER_CARDTABLE:
             return card_table_ready ? JNI_TRUE : JNI_FALSE;
         case NEKO_GC_BARRIER_Z:
-            /* ZGC barrier readiness: the dlsym'd C++ entry points are
-             * stripped from libjvm in production HotSpot 21. The
-             * VMStructs ZGlobals masks (`z_pointer_load_bad_mask` /
-             * `z_pointer_load_good_mask`) are populated lazily after GC
-             * starts, so they may be 0 at init time. Accept ZGC as ready
-             * once recognized — the obfuscated-method fast paths use
-             * masks read live from VMStructs ZGlobals at runtime (not
-             * from the cached values), and the fallback through the
-             * captured JNI bridge handles oop reads correctly under ZGC
-             * (HotSpot's load barrier is JIT-inserted around the
-             * function-table call). */
-            return JNI_TRUE;
+            return (g_neko_method_layout.sym_z_load_barrier_on_oop_field_preloaded != NULL
+                    && g_neko_method_layout.sym_z_load_barrier_on_oop_array != NULL
+                    && g_neko_method_layout.sym_z_store_barrier_on_oop_field_with_healing != NULL)
+                ? JNI_TRUE : JNI_FALSE;
         case NEKO_GC_BARRIER_SHENANDOAH:
-            /* Shenandoah barrier readiness: same as ZGC. The
-             * concurrent-marking + load-reference barrier are required
-             * in some configurations but the captured-pointer JNI bridge
-             * already invokes through HotSpot's barrier-aware allocator
-             * for object alloc / field access. */
-            return JNI_TRUE;
+            return (g_neko_method_layout.sym_shenandoah_load_reference_barrier_strong != NULL
+                    && g_neko_method_layout.sym_shenandoah_write_ref_field_pre_entry != NULL
+                    && g_neko_method_layout.sym_shenandoah_arraycopy_barrier_oop_entry != NULL)
+                ? JNI_TRUE : JNI_FALSE;
         default:
-            /* Even if BarrierSet RTTI tag doesn't match G1/cardtable AND
-             * use_zgc/use_shenandoah_gc were not set during HotSpot init,
-             * accept Serial/Parallel/CMS-style cases when card-table is
-             * available. The card table is the universal fallback for
-             * generational collectors. */
-            if (card_table_ready) return JNI_TRUE;
             return JNI_FALSE;
     }
 }
@@ -1950,8 +1888,6 @@ static jboolean neko_method_layout_init(JNIEnv *env) {
     g_neko_method_layout.vmconst_barrierset_modref = -1;
     g_neko_method_layout.vmconst_barrierset_cardtable = -1;
     g_neko_method_layout.vmconst_barrierset_g1 = -1;
-    g_neko_method_layout.vmconst_barrierset_z = -1;
-    g_neko_method_layout.vmconst_barrierset_shenandoah = -1;
     g_neko_method_layout.vmconst_cardtable_clean_card = -1;
     g_neko_method_layout.vmconst_cardtable_dirty_card = -1;
     g_neko_method_layout.vmconst_g1_young_card = -1;
